tests/semantic/invalid/initializer_exact_mismatch.mc
float amount = 1;
print amount;
